[IMP] update dir menu

--- a/parent-structure/dirMenu.yml
+++ b/parent-structure/dirMenu.yml
@@ -12,6 +12,17 @@
        'choerodon.code.agile.component',
        'choerodon.code.agile.fastsearch',
        'choerodon.code.issuelink' ] },
+  { code: 'choerodon.code.agile-program.setting',
+    name: '设置',
+    enName: 'Program Setting',
+    level: 'project',
+    parent: 'choerodon.code.program',
+    type: 'dir',
+    sort: 0,
+    icon: 'settings',
+    subMenu: 
+     [ 'choerodon.code.program.art',
+       'choerodon.code.program.programSetting' ] },
   { code: 'choerodon.code.agile.report',
     name: '报告',
     enName: 'Report',
