--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/cifront:0.7.0
+image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/cifront:0.8.1
 
 stages:
   - package
@@ -19,7 +19,6 @@ node-build:
 
 docker-build:
   stage: build
-  image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/cibase:0.7.0
   script:
     - docker_build
     - rm -rf /cache/${CI_PROJECT_NAME}-${CI_PROJECT_ID}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}
@@ -33,6 +32,14 @@ docker-build:
     exit 1
   fi
   source .auto_devops.sh
+
+  function echo_time(){
+    while true
+    do
+        sleep 30
+        date "+%Y-%m-%d %H:%M:%S"
+    done
+  }
 
   function node_module_ci() {
     npm i --registry https://nexus.choerodon.com.cn/repository/choerodon-npm/ --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
@@ -56,16 +63,17 @@ docker-build:
   }
 
   function node_build() {
+    echo_time &
     chmod -R 777 node_modules
     modules=(choerodon-front-iam/iam choerodon-front-devops/devops choerodon-front-agile/agile choerodon-front-test-manager/testManager choerodon-front-wiki/wiki choerodon-front-issue/issue choerodon-front-apim/apim)
     npm run ${1:-"build"} ${modules[@]} -registry https://nexus.choerodon.com.cn/repository/choerodon-npm/
     find dist -name '*.js' | xargs sed -i "s/localhost:version/$CI_COMMIT_TAG/g"
+    ps -ex | grep sleep | grep -v grep | awk '{print $1}' | xargs kill -9
   }
 
   function docker_build(){
     cp -r /cache/${CI_PROJECT_NAME}-${CI_PROJECT_ID}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}/* ${1:-"."}
-    docker build --pull -t ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG} ${1:-"."}
-    docker push ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
+    kaniko -c $PWD -f $PWD/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
   }
 
 before_script:
