--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,27 @@
 image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/cibase:0.8.1
 
 stages:
+  - package
   - build
-  - release
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
-build:
-  stage: build
+node-build:
+  stage: package
   script:
     - node_module_ci
     - node_build build
-    - cp -r Dockerfile $CI_PROJECT_DIR/docker
-    - cp -r dist $CI_PROJECT_DIR/docker/dist
-    - cp -r node_modules/choerodon-front-boot/structure $CI_PROJECT_DIR/docker/structure
-    - cp -r parent-structure $CI_PROJECT_DIR/docker/parent-structure
-    - cd $CI_PROJECT_DIR
-    - kaniko -c $CI_PROJECT_DIR/docker -f $CI_PROJECT_DIR/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
+    - cp -r dist /cache/${CI_PROJECT_NAME}-${CI_PROJECT_ID}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}/dist
+    - cp -r node_modules/choerodon-front-boot/structure /cache/${CI_PROJECT_NAME}-${CI_PROJECT_ID}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}/structure
+    - cp -r parent-structure /cache/${CI_PROJECT_NAME}-${CI_PROJECT_ID}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}/parent-structure
 
-release:
-  stage: release
+
+docker-build:
+  stage: build
   script:
+    - docker_build
+    - rm -rf /cache/${CI_PROJECT_NAME}-${CI_PROJECT_ID}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}
     - chart_build
 
 
@@ -43,11 +43,11 @@ release:
 
   function node_module_ci() {
     npm i --registry https://nexus.choerodon.com.cn/repository/choerodon-npm/ --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
-    mkdir -p $CI_PROJECT_DIR/docker
+    mkdir -p /cache/$CI_PROJECT_NAME-$CI_PROJECT_ID-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHA/
     mkdir -p ./tmp/
     cp -r ./node_modules/choerodon-front-boot/structure ./tmp/structure
-    modules=(iam devops agile testManager wiki issue apim)
-    folers=(choerodon-front-iam choerodon-front-devops choerodon-front-agile choerodon-front-test-manager choerodon-front-wiki choerodon-front-issue choerodon-front-apim)
+    modules=(iam devops agile testManager wiki issue)
+    folers=(choerodon-front-iam choerodon-front-devops choerodon-front-agile choerodon-front-test-manager choerodon-front-wiki choerodon-front-issue)
     for i in "${!modules[@]}"; 
     do 
       mkdir -p ./tmp/${modules[$i]}/src/app/${modules[$i]}/
@@ -56,8 +56,8 @@ release:
     cd ./tmp
     python ./structure/menu/__init__.py -o yml -m ${modules[@]}
     python ./structure/dashboard/__init__.py -o yml -m iam devops agile testManager wiki
-    cp -r menu.yml $CI_PROJECT_DIR/docker
-    cp -r dashboard.yml $CI_PROJECT_DIR/docker
+    cp -r menu.yml /cache/$CI_PROJECT_NAME-$CI_PROJECT_ID-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHA/
+    cp -r dashboard.yml /cache/$CI_PROJECT_NAME-$CI_PROJECT_ID-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHA/
     rm -rf ./tmp
     cd ..
   }
@@ -65,14 +65,15 @@ release:
   function node_build() {
     echo_time &
     chmod -R 777 node_modules
-    modules=(choerodon-front-iam/iam choerodon-front-devops/devops choerodon-front-agile/agile choerodon-front-test-manager/testManager choerodon-front-wiki/wiki choerodon-front-issue/issue choerodon-front-apim/apim)
+    modules=(choerodon-front-iam/iam choerodon-front-devops/devops choerodon-front-agile/agile choerodon-front-test-manager/testManager choerodon-front-wiki/wiki choerodon-front-issue/issue)
     npm run ${1:-"build"} ${modules[@]} -registry https://nexus.choerodon.com.cn/repository/choerodon-npm/
     find dist -name '*.js' | xargs sed -i "s/localhost:version/$CI_COMMIT_TAG/g"
     ps -ex | grep sleep | grep -v grep | awk '{print $1}' | xargs kill -9
   }
 
   function docker_build(){
-    kaniko -c $CI_PROJECT_DIR -f $CI_PROJECT_DIR/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
+    cp -r /cache/${CI_PROJECT_NAME}-${CI_PROJECT_ID}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}/* ${1:-"."}
+    kaniko -c $PWD -f $PWD/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
   }
 
 before_script:
