--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@choerodon/choerodon-front",
   "routeName": "c7n",
-  "version": "0.16.0",
-  "description": "Choerodon Framework Front",
+  "version": "0.17.0",
+  "description": "Choerodon Front",
   "scripts": {
     "start": "choerodon-front-boot start --config ./react/config.js",
     "dist": "choerodon-front-boot dist --config ./react/config.js",
@@ -15,10 +15,10 @@
   "dependencies": {
     "@choerodon/boot": "0.1.7",
     "@choerodon/master": "0.1.x",
-    "@choerodon/iam": "0.1.x",
+    "@choerodon/iam": "0.1.7",
     "@choerodon/asgard": "0.1.x",
     "@choerodon/notify": "0.1.x",
-    "@choerodon/manager": "0.1.x",
+    "@choerodon/manager": "0.1.3",
     "@choerodon/agile": "0.1.x",
     "@choerodon/issue": "0.1.x",
     "@choerodon/testManager": "0.1.x",
