--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@choerodon/boot": "0.1.7",
     "@choerodon/master": "0.1.x",
-    "@choerodon/iam": "0.1.7",
+    "@choerodon/iam": "0.1.8",
     "@choerodon/asgard": "0.1.x",
     "@choerodon/notify": "0.1.x",
     "@choerodon/manager": "0.1.3",
@@ -24,6 +24,7 @@
     "@choerodon/testManager": "0.1.x",
     "@choerodon/wiki": "0.1.x",
     "@choerodon/devops": "0.1.x",
-    "@choerodon/apim": "0.1.x"
+    "@choerodon/apim": "0.1.x",
+    "choerodon-ui": "0.5.x"
   }
 }
