[IMP] udpate chart

--- a/chart/choerodon-front/templates/deployment.yaml
+++ b/chart/choerodon-front/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
 {{- end }}
           ports:
             - name: http
-              containerPort: {{ .Values.config.port }}
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
           resources:
 {{ toYaml .Values.resources | indent 12 }}
