--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "dependencies": {
     "@choerodon/boot": "0.1.7",
     "@choerodon/master": "0.1.x",
-    "@choerodon/iam": "0.1.8",
+    "@choerodon/iam": "0.1.x",
     "@choerodon/asgard": "0.1.x",
     "@choerodon/notify": "0.1.x",
-    "@choerodon/manager": "0.1.3",
+    "@choerodon/manager": "0.1.x",
     "@choerodon/agile": "0.1.x",
     "@choerodon/issue": "0.1.x",
     "@choerodon/testManager": "0.1.x",
