[IMP] udpate package.json

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "dependencies": {
     "@choerodon/boot": "0.1.7",
     "@choerodon/master": "0.1.x",
-    "@choerodon/iam": "0.1.x",
-    "@choerodon/asgard": "0.1.x",
-    "@choerodon/notify": "0.1.x",
-    "@choerodon/manager": "0.1.x",
+    "@choerodon/iam": "0.1.9",
+    "@choerodon/asgard": "0.1.2",
+    "@choerodon/notify": "0.1.1",
+    "@choerodon/manager": "0.1.4",
     "@choerodon/agile": "0.1.x",
     "@choerodon/issue": "0.1.x",
     "@choerodon/testManager": "0.1.x",
