--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@choerodon/boot": "0.1.8",
-    "@choerodon/master": "0.1.x",
-    "@choerodon/iam": "0.1.10",
-    "@choerodon/asgard": "0.1.2",
-    "@choerodon/notify": "0.1.2",
-    "@choerodon/manager": "0.1.4",
+    "@choerodon/boot": "0.1.9",
+    "@choerodon/master": "0.1.6",
+    "@choerodon/iam": "0.1.11",
+    "@choerodon/asgard": "0.1.3",
+    "@choerodon/notify": "0.1.3",
+    "@choerodon/manager": "0.1.5",
     "@choerodon/agile": "0.1.x",
     "@choerodon/issue": "0.1.x",
     "@choerodon/testManager": "0.1.x",
