--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@choerodon/testManager": "0.1.x",
     "@choerodon/wiki": "0.1.x",
     "@choerodon/devops": "0.1.x",
-    "@choerodon/apim": "0.1.x"
+    "@choerodon/apim": "0.1.x",
+    "@choerodon/organization": "0.1.x"
   }
 }
