--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@choerodon/boot": "0.17.x",
     "@choerodon/master": "0.17.x",
-    "@choerodon/iam": "0.17.x",
+    "@choerodon/iam": "0.17.1",
     "@choerodon/asgard": "0.17.x",
     "@choerodon/notify": "0.17.x",
     "@choerodon/manager": "0.17.x",
