--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@choerodon/boot": "0.17.x",
-    "@choerodon/master": "0.17.x",
-    "@choerodon/iam": "0.17.3",
+    "@choerodon/boot": "0.17.1",
+    "@choerodon/master": "0.17.2",
+    "@choerodon/iam": "0.17.4",
     "@choerodon/asgard": "0.17.x",
     "@choerodon/notify": "0.17.x",
-    "@choerodon/manager": "0.17.1",
-    "@choerodon/sms": "0.17.x",
+    "@choerodon/manager": "0.17.2",
+    "@choerodon/sms": "0.17.1",
     "@choerodon/organization": "0.17.x",
     "@choerodon/devops": "0.17.x",
     "@choerodon/knowledge": "0.17.x",
