--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@choerodon/boot": "0.17.1",
-    "@choerodon/master": "0.17.2",
-    "@choerodon/iam": "0.17.4",
-    "@choerodon/asgard": "0.17.x",
-    "@choerodon/notify": "0.17.x",
-    "@choerodon/manager": "0.17.2",
-    "@choerodon/sms": "0.17.1",
-    "@choerodon/organization": "0.17.x",
-    "@choerodon/devops": "0.17.x",
-    "@choerodon/knowledge": "0.17.x",
-    "@choerodon/agile": "0.17.x",
-    "@choerodon/issue": "0.17.x",
-    "@choerodon/testManager": "0.17.x",
-    "@choerodon/wiki": "0.17.x"
+    "@choerodon/boot": "0.17.0",
+    "@choerodon/master": "0.17.0",
+    "@choerodon/iam": "0.17.0",
+    "@choerodon/asgard": "0.17.0",
+    "@choerodon/notify": "0.17.0",
+    "@choerodon/manager": "0.17.0",
+    "@choerodon/sms": "0.17.0",
+    "@choerodon/organization": "0.17.0",
+    "@choerodon/devops": "0.17.0",
+    "@choerodon/knowledge": "0.17.0",
+    "@choerodon/agile": "0.17.0",
+    "@choerodon/issue": "0.17.0",
+    "@choerodon/testManager": "0.17.0",
+    "@choerodon/wiki": "0.17.0"
   }
 }
