--- a/chart/choerodon-front/values.yaml
+++ b/chart/choerodon-front/values.yaml
@@ -32,6 +32,7 @@ env:
     PRO_FILE_SERVER: http://minio.example.com
     PRO_WEBSOCKET_SERVER: ws://ws.example.com
     PRO_LOCAL: true
+    PRO_EMAIL_BLACK_LIST: qq.com,gmail.com,sina.com,163.com,sina.cn,126.com
 
     
 resources: 
