--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
   "license": "ISC",
   "dependencies": {
     "@choerodon/boot": "0.18.1",
-    "@choerodon/master": "0.18.2",
-    "@choerodon/iam": "0.18.5",
-    "@choerodon/asgard": "0.18.0",
-    "@choerodon/notify": "0.18.0",
-    "@choerodon/manager": "0.18.0",
-    "@choerodon/sms": "0.18.0",
-    "@choerodon/organization": "0.18.6",
-    "@choerodon/devops": "0.18.0",
+    "@choerodon/master": "0.18.1",
+    "@choerodon/iam": "0.18.1",
+    "@choerodon/asgard": "0.18.1",
+    "@choerodon/notify": "0.18.1",
+    "@choerodon/manager": "0.18.1",
+    "@choerodon/sms": "0.18.1",
+    "@choerodon/organization": "0.18.1",
+    "@choerodon/devops": "0.18.1",
     "@choerodon/knowledge": "0.18.0",
     "@choerodon/agile": "0.18.0",
     "@choerodon/issue": "0.18.0",
     "@choerodon/testmanager": "0.18.0",
-    "@choerodon/wiki": "0.17.0",
-    "@choerodon/apim": "0.17.1"
+    "@choerodon/program": "0.18.0",
+    "@choerodon/wiki": "0.18.0",
+    "@choerodon/apim": "0.18.1"
   }
 }
