--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@choerodon/manager": "0.18.0",
     "@choerodon/sms": "0.18.0",
     "@choerodon/organization": "0.18.1",
-    "@choerodon/devops": "0.18.4",
+    "@choerodon/devops": "0.19.x",
     "@choerodon/agile": "0.20.x",
     "@choerodon/testmanager": "0.20.x",
     "@choerodon/buzz": "0.20.x",
