--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@choerodon/sms": "0.18.0",
     "@choerodon/organization": "0.18.1",
     "@choerodon/devops": "0.19.x",
-    "@choerodon/agile": "0.20.0",
-    "@choerodon/testmanager": "0.20.0",
-    "@choerodon/buzz": "0.20.0",
-    "@choerodon/knowledge": "0.20.0",
+    "@choerodon/agile": "0.19.x",
+    "@choerodon/testmanager": "0.19.x",
+    "@choerodon/buzz": "0.19.x",
+    "@choerodon/knowledge": "0.19.x",
     "@choerodon/apim": "0.18.1",
     "@choerodon/market": "0.19.3"
   }
