--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "@choerodon/testmanager": "0.19.x",
     "@choerodon/buzz": "0.19.x",
     "@choerodon/knowledge": "0.19.x",
-    "@choerodon/market": "0.19.x"
+    "@choerodon/market": "0.19.0"
   }
 }
