--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,6 @@ image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/cibase:0.8.1
 
 stages:
   - node-build
-  - chart-build
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
@@ -14,12 +13,9 @@ node-build:
     - npm i --registry https://nexus.choerodon.com.cn/repository/choerodon-npm/ --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
     - chmod -R 777 node_modules
     - npm run dist
+    - set_version
     - cp -r src/main/resources/lib $CI_PROJECT_DIR/docker/lib
     - kaniko -c $CI_PROJECT_DIR/docker -f $CI_PROJECT_DIR/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
-
-chart-build:
-  stage: chart-build
-  script:
     - chart_build
 
 .auto_devops: &auto_devops |
@@ -30,5 +26,43 @@ chart-build:
   fi
   source .auto_devops.sh
 
+  function set_version(){
+    export CI_COMMIT_TAG=${CI_COMMIT_TAG}-${CI_JOB_ID}
+  }
+
+  function chart_build(){
+    #判断chart主目录名是否与应用编码保持一致
+    CHART_DIRECTORY_PATH=`find . -maxdepth 2 -name ${PROJECT_NAME}`
+    if [ ! -n "${CHART_DIRECTORY_PATH}" ]; then
+        echo "The chart's home directory should be consistent with the application code!"
+        exit 1
+    fi
+    # 查找Chart.yaml文件
+    CHART_PATH=`find . -maxdepth 3 -name Chart.yaml`
+    # 重置values.yaml文件中image.repository属性
+    sed -i "s,repository:.*$,repository: ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME},g" ${CHART_PATH%/*}/values.yaml
+    # 构建chart包，重写version与app-version为当前版本
+    helm package ${CHART_PATH%/*} --version ${CI_COMMIT_TAG} --app-version ${CI_COMMIT_TAG}
+    TEMP=${CHART_PATH%/*}
+    FILE_NAME=${TEMP##*/}
+    # 通过Choerodon API上传chart包到devops-service
+    result_upload_to_devops=`curl -X POST \
+        -F "token=${Token}" \
+        -F "version=${CI_COMMIT_TAG}" \
+        -F "file=@${FILE_NAME}-${CI_COMMIT_TAG}.tgz" \
+        -F "commit=${CI_COMMIT_SHA}" \
+        -F "image=${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}" \
+        "${CHOERODON_URL}/devops/ci" \
+        -o "${CI_COMMIT_SHA}-ci.response" \
+        -w %{http_code}`
+    # 判断本次上传到devops是否出错
+    response_upload_to_devops=`cat "${CI_COMMIT_SHA}-ci.response"`
+    rm "${CI_COMMIT_SHA}-ci.response"
+    if [ "$result_upload_to_devops" != "200" ]; then
+        echo $response_upload_to_devops
+        echo "upload to devops error"
+        exit 1
+    fi
+}
 before_script:
   - *auto_devops
