--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,11 @@ variables:
 node-build:
   stage: node-build
   script:
+    - set_version
     - npm run clean
     - npm i --registry https://nexus.choerodon.com.cn/repository/choerodon-npm/ --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
     - chmod -R 777 node_modules
     - npm run dist
-    - set_version
     - cp -r src/main/resources/lib $CI_PROJECT_DIR/docker/lib
     - kaniko -c $CI_PROJECT_DIR/docker -f $CI_PROJECT_DIR/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
     - chart_build
@@ -28,6 +28,7 @@ node-build:
 
   function set_version(){
     export CI_COMMIT_TAG=${CI_COMMIT_TAG}-${CI_JOB_ID}
+    echo "VERSION_TAG=${CI_COMMIT_TAG"
   }
 
   function chart_build(){
