--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@choerodon/asgard": "0.18.0",
     "@choerodon/notify": "0.20.x",
     "@choerodon/manager": "0.18.0",
-    "@choerodon/devops": "^0.19.0",
+    "@choerodon/devops": "0.19.1",
     "@choerodon/agile": "0.19.x",
     "@choerodon/testmanager": "0.19.x",
     "@choerodon/buzz": "0.19.x",
