--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 node-build:
   stage: node-build
   variables: 
-    CI_COMMIT_TAG: "$CI_COMMIT_TAG-${CI_JOB_ID}"
+    CI_COMMIT_TAG: "$CI_COMMIT_TAG-${CI_PIPELINE_ID}"
   script:
     - npm run clean
     - npm i --registry https://nexus.choerodon.com.cn/repository/choerodon-npm/ --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
@@ -18,12 +18,13 @@ node-build:
     - npm run dist
     - cp -r src/main/resources/lib $CI_PROJECT_DIR/docker/lib
     - kaniko -c $CI_PROJECT_DIR/docker -f $CI_PROJECT_DIR/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
-    - chart_build
 
 chart-build:
+  variables: 
+    CI_COMMIT_TAG: "$CI_COMMIT_TAG-${CI_PIPELINE_ID}"
   stage: chart-build
   script:
-    - echo_ok
+    - chart_build
 
 .auto_devops: &auto_devops |
   http_status_code=`curl -o .auto_devops.sh -s -m 10 --connect-timeout 10 -w %{http_code} "${CHOERODON_URL}/devops/ci?token=${Token}&type=front"`
@@ -32,10 +33,6 @@ chart-build:
     exit 1
   fi
   source .auto_devops.sh
-
-  function echo_ok(){
-    echo "ok"
-  }
 
 before_script:
   - *auto_devops
