--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ variables:
 
 node-build:
   stage: node-build
-  variables: 
-    CI_COMMIT_TAG: "$CI_COMMIT_TAG-${CI_PIPELINE_ID}"
   script:
+    - export CI_COMMIT_TAG="${CI_COMMIT_TAG}-${CI_PIPELINE_ID}"
+    - echo ${CI_COMMIT_TAG}
     - npm run clean
     - npm i --registry https://nexus.choerodon.com.cn/repository/choerodon-npm/ --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
     - chmod -R 777 node_modules
@@ -20,10 +20,10 @@ node-build:
     - kaniko -c $CI_PROJECT_DIR/docker -f $CI_PROJECT_DIR/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
 
 chart-build:
-  variables: 
-    CI_COMMIT_TAG: "$CI_COMMIT_TAG-${CI_PIPELINE_ID}"
   stage: chart-build
   script:
+    - export CI_COMMIT_TAG="${CI_COMMIT_TAG}-${CI_PIPELINE_ID}"
+    - echo ${CI_COMMIT_TAG}
     - chart_build
 
 .auto_devops: &auto_devops |
