--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@choerodon/boot": "0.20.x",
     "@choerodon/master": "0.20.x",
     "choerodon-ui": "^0.8.3",
-    "@choerodon/base": "0.20.x",
+    "@choerodon/base": "0.20.0",
     "@choerodon/asgard": "0.20.0",
-    "@choerodon/notify": "0.20.x",
+    "@choerodon/notify": "0.20.0",
     "@choerodon/manager": "0.18.0",
-    "@choerodon/devops": "0.19.1",
-    "@choerodon/agile": "0.19.x",
-    "@choerodon/testmanager": "0.19.x",
-    "@choerodon/buzz": "0.19.x",
-    "@choerodon/knowledge": "0.19.x",
-    "@choerodon/market": "0.19.x"
+    "@choerodon/devops": "0.19.0",
+    "@choerodon/agile": "0.19.0",
+    "@choerodon/testmanager": "0.19.0",
+    "@choerodon/buzz": "0.19.0",
+    "@choerodon/knowledge": "0.19.0",
+    "@choerodon/market": "0.19.0"
   }
 }
