--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@choerodon/boot": "0.20.x",
     "@choerodon/master": "0.20.x",
-    "choerodon-ui": "0.8.8",
+    "choerodon-ui": "^0.8.11",
     "@choerodon/base": "0.20.0",
     "@choerodon/asgard": "0.20.0",
     "@choerodon/notify": "0.20.0",
