--- a/react/.env
+++ b/react/.env
@@ -1,3 +1,3 @@
 BUZZ_WEBSOCKET_URL=ws://buzz.example.com
-FEEDBACK_TOKENS='{"base-service":"8ddaf34d-c246-11e9-9b3e-5a3542b4bc99","agile-service":"8ddbe976-c246-11e9-9b3e-5a3542b4bc99"}'
 DEVOPS_HOST=ws://devops.choerodon.example.com
+outward='#/knowledge/share'
