--- a/react/.env
+++ b/react/.env
@@ -1,3 +1,3 @@
 BUZZ_WEBSOCKET_URL=ws://buzz.example.com
 DEVOPS_HOST=ws://devops.choerodon.example.com
-outward='#/knowledge/share,#/agile/preview'
+outward='#/knowledge/share,#/agile/preview,#/base/register-organization'
