--- a/react/.env
+++ b/react/.env
@@ -1,3 +1,3 @@
 BUZZ_WEBSOCKET_URL=ws://buzz.example.com
 DEVOPS_HOST=ws://devops.choerodon.example.com
-outward='/knowledge/share,/base/register-organization,/market/market-index'
+outward='/knowledge/share,/base/register-organization,/market/marketplace'
