--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@choerodon/devops": "0.19.0",
     "@choerodon/agile-pro": "0.19.0",
     "@choerodon/testmanager": "0.19.0",
-    "@choerodon/knowledge": "0.19.0"
+    "@choerodon/knowledge": "0.19.0",
+    "@choerodon/market": "0.19.0"
   }
 }
