--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@choerodon/boot": "0.20.x",
+    "@choerodon/boot": "0.19.x",
     "@choerodon/master": "0.19.x",
     "choerodon-ui": "^0.8.11",
-    "@choerodon/base-pro": "0.20.0",
-    "@choerodon/asgard": "0.20.0",
-    "@choerodon/notify": "0.20.0",
-    "@choerodon/manager": "0.20.0",
+    "@choerodon/base": "0.19.0",
+    "@choerodon/asgard": "0.19.0",
+    "@choerodon/notify": "0.19.0",
+    "@choerodon/manager": "0.19.0",
     "@choerodon/devops": "0.19.0",
-    "@choerodon/agile-pro": "0.19.0",
+    "@choerodon/agile": "0.19.0",
     "@choerodon/testmanager": "0.19.0",
     "@choerodon/knowledge": "0.19.0",
     "@choerodon/market": "0.19.0"
