--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ node-build:
     - npm run dist
     - cp -r src/main/resources/lib $CI_PROJECT_DIR/docker/lib
     - kaniko -c $CI_PROJECT_DIR/docker -f $CI_PROJECT_DIR/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
+  except:
+      - tags
 
 chart-build:
   stage: chart-build
@@ -25,6 +27,33 @@ chart-build:
     - export CI_COMMIT_TAG="${CI_COMMIT_TAG}-${CI_PIPELINE_ID}"
     - echo ${CI_COMMIT_TAG}
     - chart_build
+  except:
+      - tags
+
+node-build-tag:
+  stage: node-build
+  script:
+    - export CI_COMMIT_TAG="${CI_COMMIT_TAG}"
+    - echo ${CI_COMMIT_TAG}
+    - npm run clean
+    - npm i --registry https://nexus.choerodon.com.cn/repository/choerodon-npm/ --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
+    - chmod -R 777 node_modules
+    - npm run dist
+    - cp -r src/main/resources/lib $CI_PROJECT_DIR/docker/lib
+    - kaniko -c $CI_PROJECT_DIR/docker -f $CI_PROJECT_DIR/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
+  only:
+      - tags
+
+chart-build-tag:
+  stage: chart-build
+  script:
+    - export CI_COMMIT_TAG="${CI_COMMIT_TAG}"
+    - echo ${CI_COMMIT_TAG}
+    - chart_build
+  only:
+      - tags
+
+
 
 .auto_devops: &auto_devops |
   http_status_code=`curl -o .auto_devops.sh -s -m 10 --connect-timeout 10 -w %{http_code} "${CHOERODON_URL}/devops/ci?token=${Token}&type=front"`
